--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ env:
     - LUAROCKS_VERSION=3.0.0
     - VIPS_VERSION=8.7.0
     - VIPS_PRE_VERSION=rc2
-    - VIPS_TAR_VERSION=$VIPS_VERSION
+    - VIPS_TAR_VERSION=$VIPS_VERSION-rc2
     - VIPS_WARNING=0
     - JOBS=2
     - LD_LIBRARY_PATH=$HOME/vips/lib:$LD_LIBRARY_PATH
